[NEW] NewsAPIService.kt / NewsRemoteDataSource.kt / NewsRemoteDataSourceImpl.kt / NewsRepositoryImpl.kt - Remote data source

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+MY_KEY = "5e31094cf3554e5e93c3dd4fe389081b"
+MY_URL = "https://newsapi.org/"
