--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,13 @@ android {
 dependencies {
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
     def lifecycle_version = "2.3.1"
     def coroutines_version = "1.3.7"
     def retrofit_version = "2.9.0"
     def Interceptor_version = "4.7.2"
-    def nav_version = "2.3.2"
+    def nav_version = "2.3.4"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -57,9 +59,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //Navigation
+    // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // Feature module Support
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
