--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     def retrofit_version = "2.9.0"
     def Interceptor_version = "4.7.2"
     def nav_version = "2.3.4"
+    def glideVersion = '4.11.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -58,6 +59,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
 
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
