--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,10 +96,12 @@ dependencies {
 
     //Room
     def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
-    implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation("androidx.room:room-ktx:$room_version")
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 
     testImplementation "com.google.truth:truth:1.0.1"
 }
